--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,73 @@
 :root {
     --primary-font: 'Roboto', sans-serif;
-    --secondary-font: 'Lato', sans-serif;
+    --secondary-font: 'Poppins', sans-serif;
+
 }
 
+body {
+    text-align: center;
+    background-color: #272044;
+}
+h1, h2, h3, h4 {
+    font-family: var(--secondary-font);
+}
+
+.container {
+    max-width: 1400px;
+    margin: 0 auto;
+}
+
+.hero {
+    
+    background-image: linear-gradient(
+    rgba(0, 0, 0, 0.6),
+    rgba(0, 0, 0, 0.5)
+  ),
+  url("cph.jpeg");
+background-size: cover;
+background-position: center;
+background-repeat: no-repeat;
+padding: 200px 0;}
+
+.hero h1 {
+    font-weight: 700;
+  font-size: 96px;
+  line-height: 1;
+  margin: 30px 0;
+  color: white;
+
+}
+.hero h2 {
+    font-weight: 400;
+    font-size: 40px;
+    line-height: 1.5;
+    margin: 0;
+    color: white;
+}
+.hero a {
+    font-weight: 700;
+  font-size: 14px;
+  line-height: 1.5;
+  text-align: center;
+  color: #272044;
+  padding: 16px 32px;
+  margin-top: 32px;
+  display: inline-block;
+  letter-spacing: 3px;
+  text-decoration: none;
+  text-transform: uppercase;
+  background: white;
+}
+@media (max-width: 900px) {
+    .hero {
+      padding: 60px 0;
+    }
+  
+    .hero h1 {
+      font-size: 48px;
+    }
+  
+    .hero h2 {
+      font-size: 20px;
+    }
+  }
