--- a/src/style.css
+++ b/src/style.css
@@ -1,11 +1,11 @@
 :root {
-    --primary-font: 'Roboto', sans-serif;
+
     --secondary-font: 'Poppins', sans-serif;
 
 }
 
 body {
-    text-align: center;
+    font-family: var(--secondary-font);
     background-color: #272044;
 }
 h1, h2, h3, h4 {
@@ -16,9 +16,13 @@ h1, h2, h3, h4 {
     max-width: 1400px;
     margin: 0 auto;
 }
+.grid {
+    display: grid;
+    grid-template-columns: 1fr 2fr 2fr;
+  }
 
 .hero {
-    
+    text-align: center;
     background-image: linear-gradient(
     rgba(0, 0, 0, 0.6),
     rgba(0, 0, 0, 0.5)
@@ -58,6 +62,57 @@ padding: 200px 0;}
   text-transform: uppercase;
   background: white;
 }
+
+section {
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+
+footer{
+    color: white;
+  background-image: linear-gradient(
+      rgba(39, 32, 68, 0.9),
+      rgba(39, 32, 68, 0.9)
+    ),
+    url("cphff.jpg");
+
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 100px 0;
+  
+}
+footer h3 {
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 30px;
+  }
+  
+  footer p {
+    font-weight: 400;
+    font-size: 16px;
+    opacity: 0.7;
+    margin-right: 20px;
+    line-height: 24px;
+    margin-top: 20px;
+  }
+  
+  footer ul {
+    padding: 0;
+  }
+  
+  footer li {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+  
+  footer a {
+    color: white;
+    opacity: 0.7;
+    
+  }
+  
+
 @media (max-width: 900px) {
     .hero {
       padding: 60px 0;
