--- a/src/style.css
+++ b/src/style.css
@@ -18,7 +18,28 @@ h1, h2, h3, h4 {
 }
 .grid {
     display: grid;
+    grid-gap: 64px;
+  }
+
+.img-responsive {
+    max-width: 100%;
+    height: 465px;
+    
+}
+
+.grid-2-columns {
+    grid-template-columns: 1fr 1fr; 
+  
+}
+
+.grid-3-columns-with-first-narrow {
     grid-template-columns: 1fr 2fr 2fr;
+  }
+
+  section {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 100px 0;
   }
 
 .hero {
@@ -31,14 +52,15 @@ h1, h2, h3, h4 {
 background-size: cover;
 background-position: center;
 background-repeat: no-repeat;
-padding: 200px 0;}
+padding: 200px 0;
+color: white;
+}
 
 .hero h1 {
     font-weight: 700;
   font-size: 96px;
   line-height: 1;
   margin: 30px 0;
-  color: white;
 
 }
 .hero h2 {
@@ -46,7 +68,6 @@ padding: 200px 0;}
     font-size: 40px;
     line-height: 1.5;
     margin: 0;
-    color: white;
 }
 .hero a {
     font-weight: 700;
@@ -63,10 +84,37 @@ padding: 200px 0;}
   background: white;
 }
 
-section {
-    max-width: 1200px;
-    margin: 0 auto;
+main {
+    background-color: white;
+}
+main h1 {
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.5;
+    margin: 0;
+    letter-spacing: 5px;
+    color: #272044;
+    opacity: 0.3;
+    text-transform: uppercase;
   }
+  
+  main h2 {
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 1.5;
+    color: #272044;
+    margin: 0;
+  }
+  
+  main p {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    color: #272044;
+    opacity: 0.7;
+  }
+
 
 footer{
     color: white;
@@ -78,7 +126,6 @@ footer{
 
   background-repeat: no-repeat;
   background-size: cover;
-  padding: 100px 0;
   
 }
 footer h3 {
@@ -91,9 +138,8 @@ footer h3 {
     font-weight: 400;
     font-size: 16px;
     opacity: 0.7;
-    margin-right: 20px;
     line-height: 24px;
-    margin-top: 20px;
+   
   }
   
   footer ul {
@@ -125,4 +171,12 @@ footer h3 {
     .hero h2 {
       font-size: 20px;
     }
+    .grid {
+        grid-template-columns: 1fr;
+        grid-gap: 32px;
+      }
+    
+      section {
+        padding: 30px;
+      }
   }
