--- a/src/style.css
+++ b/src/style.css
@@ -12,6 +12,9 @@ h1, h2, h3, h4 {
     font-family: var(--secondary-font);
 }
 
+.text-center {
+    text-align: center;
+}
 .container {
     max-width: 1400px;
     margin: 0 auto;
@@ -26,6 +29,11 @@ h1, h2, h3, h4 {
     height: 465px;
     
 }
+.img-responsive2 {
+    max-width: 100%;
+    display: block;
+    
+}
 
 .grid-2-columns {
     grid-template-columns: 1fr 1fr; 
@@ -36,12 +44,45 @@ h1, h2, h3, h4 {
     grid-template-columns: 1fr 2fr 2fr;
   }
 
-  section {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 100px 0;
+  .grid-3-columns {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+  .card {
+    background-color: white;
+    margin: 30px 0;
   }
 
+  .card-body {
+    padding: 30px;
+  }
+
+  .card-footer {
+    padding: 0 30px 30px;
+  }
+
+
+.btn {
+    display: block;
+    color: white;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 21px;
+    text-align: center;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+    padding: 16px;
+    background-color: #462cb3;
+    text-decoration: none;
+  }
+  section {
+    max-width: 100%;
+    margin: 0 auto;
+    padding: 100px ;
+  }
+
+  section.secondary {
+    background: #f8f8f8;
+  }
 .hero {
     text-align: center;
     background-image: linear-gradient(
@@ -105,6 +146,22 @@ main h1 {
     color: #272044;
     margin: 0;
   }
+  main h4 {
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 1;
+    color: #272044;
+    margin: 0;
+  }
+  
+  main h5 {
+    font-weight: 700;
+    font-size: 13px;
+    margin: 0;
+    line-height: 1;
+    color: #272044;
+  }
+  
   
   main p {
     font-style: normal;
