--- a/src/style.css
+++ b/src/style.css
@@ -47,6 +47,15 @@ h1, h2, h3, h4 {
   .grid-3-columns {
     grid-template-columns: 1fr 1fr 1fr;
   }
+  .embed {
+    width: 100%;
+    aspect-ratio: 1 /1;
+  }
+  
+  .instagram-embeds {
+    margin: 30px 0;
+  }
+  
   .card {
     background-color: white;
     margin: 30px 0;
@@ -55,6 +64,11 @@ h1, h2, h3, h4 {
   .card-body {
     padding: 30px;
   }
+  .card-header.grid {
+    grid-gap: 0;
+  }
+  
+
 
   .card-footer {
     padding: 0 30px 30px;
@@ -223,10 +237,15 @@ footer h3 {
   
     .hero h1 {
       font-size: 48px;
+     
     }
   
     .hero h2 {
       font-size: 20px;
+    }
+
+    main h1 {
+        text-align: center;
     }
     .grid {
         grid-template-columns: 1fr;
@@ -235,5 +254,12 @@ footer h3 {
     
       section {
         padding: 30px;
+      }
+      .card-header img {
+        display: none;
+      }
+    
+      .embed {
+        aspect-ratio: 16 / 9;
       }
   }
