--- a/src/style.css
+++ b/src/style.css
@@ -8,12 +8,11 @@ body {
     font-family: var(--secondary-font);
     background-color: #272044;
 }
-h1, h2, h3, h4 {
-    font-family: var(--secondary-font);
-}
+
 
 .text-center {
     text-align: center;
+    padding-bottom: 30px;
 }
 .container {
     max-width: 1400px;
